--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "next": "13.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-datepicker-react": "^1.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
